--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<script src="enable-threads.js"></script>
+		<script src="coi-serviceworker.js"></script>
 		<title>Way-of-Life-Proto</title>
 		<style>
 body {
